# poli

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  install.ps1  install.sh
src/: log.cpp  main.cpp
src/modules/logging/: log.cpp  log.h
src/modules/notes/: notes.cpp  notes.h  templates.h
